--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,5 @@ build-backend = "setuptools.build_meta"
 
 [tool.pytest.ini_options]
 norecursedirs = [
-  "*__pycache__",
-  ".test_class.py",
+  "*__pycache__"
 ]
