--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
-# Compiled python modules.
 *__pycache__
 *_cache
-
-# Setuptools distribution folder.
-/dist/
-
-# Python egg metadata, regenerated from source files by setuptools.
 *.egg-info
-
-# iPython Notebook checkpoints:
 *.ipynb_checkpoints
+build
