Added pre-commit config.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,10 +1,10 @@
 [metadata]
 name = arraytainers
-version = 0.0.0
+version = attr: arraytainers.__version__
 author = Matthew Bilton
 author_email = Matt.A.Bilton@gmail.com
 long_description = file: README.md
-description = Dictionary-like and list-like objects for Numpy and Jax arrays.
+description = nestable dict-like and list-like containers for numpy and jax arrays.
 keywords = array, container, arraytainer, numpy, jax, dictionary, list
 url = https://github.com/MABilton/arraytainers
 classifiers =
@@ -19,6 +19,12 @@ install_requires =
     more_itertools
 packages = find:
 
+[options.extras_require]
+jaxtainers =
+    jax
+    jaxlib
+
 [options.packages.find]
 exclude =
     tests
+    examples
